# woo-deep-researcher

./: .env.example  .env.test  .gitignore  README.md  dockerfile  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agents/deep_researcher/: configuration.py  graph.py
agents/hitl/: configuration.py  graph.py  prompts.py  state.py
app/: main.py
app/core/: config.py  exception_handlers.py  logging_config.py
app/router/: deep_researcher.py  feedback_routes.py  health.py  indexer.py
database/: mongo.py
services/: mongo_service.py
tests/: test.ipynb  test_mongo.py
