[project]
name = "woo-deep-researcher"
version = "0.0.1"
description = "Lightweight web research and summarization assistant."
authors = [
    { name = "Lance Martin" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.55",
    "langchain-community>=0.3.9",
    "tavily-python>=0.5.0",
    "langchain-ollama>=0.2.1",
    "fastapi>=0.115.7",
    "uvicorn>=0.23.0",
    "pydantic>=2.7.4,<3.0.0",
    "pymilvus>=2.5.4",
    "pymongo>=4.9.0,<4.10.0",
    "pytest>=8.3.4",
    "python-json-logger>=3.2.1",
    "langgraph-checkpoint-mongodb==0.1.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "app",
  "agents"
]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP"
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"